# myhooks

./: .bumpversion.cfg  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  Pipfile  README.md  setup.cfg
ensure-venv/: main.py
ensurevenv/: Pipfile  README.md  setup.cfg
hooks/: ensure_venv.py
hooks/ensure-env/: main.py
