[metadata]
name = myhooks
description = ensure-venv: check you are under the right venv
long_description = file:README.md
long_description_content_type = text/markdown
keywords=pre-commit,hook,virtualenv
version = 0.1.0
author = Hector Canto
author_email = hectorcanto@gmail.com
url = https://github.com/hectorcanto/myhooks

[options]
packages = ensurevenv

[options.entry_points]
console_scripts =
    ensure-venv = ensure-venv.main:main
