[metadata]
name = myhooks
description = ensure-venv: check you are under the right venv
long_description = file:README.md
long_description_content_type = text/markdown
keywords=git,pre-commit,hook,virtualenv
version = 0.1.0
author = Hector Canto
author_email = hectorcanto@gmail.com
url = https://github.com/hectorcanto/myhooks

[options]
packages = hooks
python_requires = >=3.8

[options.entry_points]
console_scripts =
    ensure-venv=hooks.ensure_venv:in_venv
