[metadata]
name = ensure-venv
description = check you are under the right venv
long_description = file:README.md
long_description_content_type = text/md
keywords=pre-commit,hook,virtualenv
version = 0.1.0
author = Hector Canto
author_email = hectorcanto@gmail.com
url = https://github.com/hectorcanto/myhooks/ensurevenv

[options]
packages = ensurevenv

[options.entry_points]
console_scripts =
    ensure-venv = ensurevenv.main:main
